--- a/tools/crowdin.yaml
+++ b/tools/crowdin.yaml
@@ -1,5 +1,6 @@
 ---
 project_identifier: catrobat
+
 base_url: http://api.crowdin.net
 base_path: .
 preserve_hierarchy: true
@@ -10,8 +11,10 @@ files:
    translation: '/catroid/res/values-%android_code%/%original_file_name%'
    update_option: 'update_without_changes'
    ignore:
-     -/include/*
+     -Paintroid (Pocket Code for Android)
      -Localizable.strings
+     -catroweb.en.yml
+     -Catroweb sharing website (pocketcode.org)
    languages_mapping:
       android_code:
         af: af
@@ -23,10 +26,13 @@ files:
         de: de
         el: el
         en: en
+        es: es
         es-ES: es
         fa: fa
         fi: fi
         fr: fr
+        gu: gu
+        gu-IN: gu
         hi: hi
         hr: hr
         hu: hu
@@ -35,17 +41,24 @@ files:
         ja: ja
         ko: ko
         nl: nl
+        'no': 'no'
+        'no-NO': 'no'
         pl: pl
+        pt: pt
         pt-PT: pt
         ro: ro
         ru: ru
         sk: sk
         sl: sl
-        sr: sr
+        sr-CS: sr-rCS
+        sr-SP: sr-rSP
         sv-SE: sv
+        th: th
+        th-TH: th
         tr: tr
         uk: uk
+        ur: ur
+        ur-PK: ur
         vi: vi
-        zh-CN: zh
 
    first_line_contains_header: true
