--- a/ansible_jenkins/master_jenkins_setup.yml
+++ b/ansible_jenkins/master_jenkins_setup.yml
@@ -9,6 +9,7 @@
     - name: Install Base Packages
       apt: "name={{ item }} state=present"
       with_items:
+        - apt-transport-https
         - git
         - openssh-server
         - openjdk-7-jdk
