--- a/ansible_jenkins/master_jenkins_setup.yml
+++ b/ansible_jenkins/master_jenkins_setup.yml
@@ -22,6 +22,7 @@
 
   vars:
     jenkins_user_home: "/home/jenkins"
+    catroid_user_home: "/home/catroid"
 
   # Once https://github.com/ansible/ansible/issues/13263 is fixed activate
   # the password prompt when a custom variable (change_pw ...) is set.
@@ -57,6 +58,12 @@
         regexp: "^jenkins\tALL=NOPASSWD: "
         line: "jenkins\tALL=NOPASSWD: /sbin/reboot"
         validate: "visudo -cf %s"
+
+    - name: Download the Catroid jenkins directory consisting scripts etc.
+      git:
+        repo: https://github.com/Catrobat/Jenkins.git
+        dest: "{{ catroid_user_home }}/Jenkins"
+      become_user: catroid
 
 
 - hosts: jenkins_master
