Adds cron-job to restart the network on network loss.
For example when the gateway is down the network needs to be restarted.
This is necessary for every host (master + all slaves).

--- a/ansible_jenkins/master_jenkins_setup.yml
+++ b/ansible_jenkins/master_jenkins_setup.yml
@@ -39,6 +39,14 @@
         dest: "{{ catroid_user_home }}/Jenkins"
       become_user: catroid
 
+    - name: After network loss, e.g. gateway was down, restart network automatically.
+      cron:
+        name: Restart network
+        job: "{{ catroid_user_home }}/Jenkins/scripts/restartNetwork"
+        minute: "*/10"
+        user: root
+        cron_file: "/etc/crontab"
+
 
 - hosts: emulators
   become: yes
