JENKINS-90 Store CSS file for job description externally.
This avoids of copy-pasting the style sheets in the job description.
As a result maintenance of the style sheets is easier.
There is only one single source of truth.

--- a/ansible_jenkins/roles/master/tasks/main.yml
+++ b/ansible_jenkins/roles/master/tasks/main.yml
@@ -32,6 +32,14 @@
   environment:
     JENKINS_HOME: "{{ jenkins_home }}"
 
+  # Jobs can use a shared style sheet, see https://confluence.catrob.at/x/SYFYAQ
+- name: Place a link to the job style in the user content directory.
+  file:
+    src: "{{ catroid_user_home }}/Jenkins/css/job_styles.css"
+    dest: "{{ jenkins_home }}/userContent/job_styles.css"
+    state: link
+  become_user: jenkins
+
 - name: Change Jenkins Defaults
   ini_file:
     section: null
