Sets Java 8 as default.
This ensures that new Jenkins version uses Java 8 instead of Java 7.
Jenkin depends on Java 8 since Jenkins 2.54.

--- a/ansible_jenkins/roles/basics/tasks/main.yml
+++ b/ansible_jenkins/roles/basics/tasks/main.yml
@@ -18,3 +18,8 @@
     name: openjdk-8-jdk
     state: present
     default_release: jessie-backports
+
+- name: Select OpenJDK 8 as default
+  alternatives:
+    name: java
+    path: /usr/lib/jvm/java-1.8.0-openjdk-amd64/jre/bin/java
