JENKINS-124 Do not start the jenkins service automatically after installation.
This ensures that no files will be written anywhere before the configuration is adapted.

--- a/ansible_jenkins/roles/master/tasks/main.yml
+++ b/ansible_jenkins/roles/master/tasks/main.yml
@@ -49,7 +49,7 @@
 - name: Install Jenkins
   apt: "name=jenkins state=present"
   environment:
-    JENKINS_HOME: "{{ jenkins_home }}"
+    RUNLEVEL: "1" # to not start jenkins directly
 
 - name: Change Jenkins Defaults
   ini_file:
