JENKINS-115 Ensure rsync is installed for backups.

--- a/ansible_jenkins/roles/master/tasks/main.yml
+++ b/ansible_jenkins/roles/master/tasks/main.yml
@@ -1,4 +1,7 @@
 ---
+- name: Install rsync to create backups.
+  apt: "name=rsync state=present"
+
 - name: Specify the jenkins user with a custom home.
   user:
     name: jenkins
