JENKINS-125 Install jenkins plugins via ansible.
The implementation automatically detects whether the intial password
has to be used, or whether LDAP has already been activated.
Depending on that decision different user/password combinations are used,
allowing idempotent behavior.

--- a/ansible_jenkins/roles/master/defaults/main.yml
+++ b/ansible_jenkins/roles/master/defaults/main.yml
@@ -2,3 +2,6 @@
 jenkins_user_password: ""
 jenkins_user_home: "/home/jenkins"
 jenkins_home: "{{ jenkins_user_home }}/jenkins"
+install_plugins: Yes
+ldap_user: ""
+ldap_password: ""
