JENKINS-125 Improves error-handling and simplifies interface.
* Only return the user/password now instead of a dict.
  As a result the output is not catered directly to jenkins_plugin module.
  This makes it easier to use the credentials in modules like jenkins_script.
* Newer ansible versions also depend on newer Python versions.
  Thus using the format function is ok.
* to_byte for strings should be mor estable and is done by other modules as well.
* Wait for the config.xml file to appear to remove one race condition.

--- a/ansible_jenkins/roles/master/tasks/main.yml
+++ b/ansible_jenkins/roles/master/tasks/main.yml
@@ -78,7 +78,10 @@
 - name: Install plugin
   jenkins_plugin:
     name: "{{ item }}"
-    params: "{{ credentials['credentials'] }}"
+    params:
+      url: http://localhost:8080
+      url_username: "{{ credentials['user'] }}"
+      url_password: "{{ credentials['password'] }}"
     jenkins_home: "{{ jenkins_home }}"
     timeout: 60
   no_log: Yes
