--- a/ansible_jenkins/roles/master/defaults/main.yml
+++ b/ansible_jenkins/roles/master/defaults/main.yml
@@ -2,6 +2,7 @@
 jenkins_user_password: ""
 jenkins_user_home: "/home/jenkins"
 jenkins_home: "{{ jenkins_user_home }}/jenkins"
+jenkins_url: http://localhost:8080
 install_plugins: Yes
 ldap_user: ""
 ldap_password: ""
