JENKINS-126 Adds foundation to configure Jenkins from Ansible.
Some basic configurations are done already.

--- a/ansible_jenkins/roles/master/defaults/main.yml
+++ b/ansible_jenkins/roles/master/defaults/main.yml
@@ -4,5 +4,6 @@ jenkins_user_home: "/home/jenkins"
 jenkins_home: "{{ jenkins_user_home }}/jenkins"
 jenkins_url: http://localhost:8080
 install_plugins: Yes
+configure_jenkins: No
 ldap_user: ""
 ldap_password: ""
