JENKINS-126 Also install the android lint plugin via ansible.

--- a/ansible_jenkins/roles/master/tasks/main.yml
+++ b/ansible_jenkins/roles/master/tasks/main.yml
@@ -91,6 +91,7 @@
   notify: restart jenkins
   with_items:
     - android-emulator
+    - android-lint
     - antisamy-markup-formatter # allows html descriptions for plugins
     - build-name-setter
     - build-timeout
