JENKINS-158: Run Emulator jobs inside Xvnc
Start a xvnc-session per build of a job which
runs the emulator. This avoids the need of the
jenkins user to be logged in to a X-Session.

--- a/ansible_jenkins/roles/emulator/tasks/main.yml
+++ b/ansible_jenkins/roles/emulator/tasks/main.yml
@@ -22,6 +22,9 @@
     - qemu-kvm
     - libvirt-bin
 
+- name: Install a vncserver to avoid the need of having an active xsession.
+  apt: name=tightvncserver state=present
+
 - name: Add the catroid user to the groups needed by KVM for the emulator.
   user:
     name: catroid
